style.css
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  font-size: 62.5%;
}

body {
  background: rgb(131, 58, 180);
  background-image: linear-gradient(
    90deg,
    rgba(131, 58, 180, 1) 0%,
    rgba(63, 94, 251, 1) 58%,
    rgba(252, 70, 107, 1) 100%
  );
  background-repeat: no-repeat;
  font-family: "Roboto Mono", monospace;
}

footer {
  font-size: 1.2rem;
  text-align: center;
  color: white;
  margin-top: 20px;
}

a,
a:link,
a:visited {
  color: white;
}

a:hover,
a:active {
  color: #f46f99;
}

.main-content {
  display: grid;
  grid-template-rows: 1fr auto 1fr;
  height: 100%;
  margin: auto;
  max-width: 100rem;
}

.header {
  text-align: center;
  text-transform: uppercase;
  font-size: 4.8rem;
  margin-top: 40px;
  background: #121fcf;
  background: linear-gradient(to left, #121fcf 0%, #cf1512 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  -webkit-text-stroke-width: 0.1px;
  -webkit-text-stroke-color: black;
  margin-bottom: 30px;
}

.outer-container {
  padding-right: 10px;
  padding-left: 10px;
  min-height: 30vh;
}
.inner-container {
  display: flex;
  justify-content: center;
  align-content: center;

  position: relative;
  box-shadow: 0 30px 100px rgba(0, 0, 0, 40%);
}

.dice {
  position: absolute;
  height: 60px;
  z-index: 1;
  top: 10rem;
  box-shadow: 0rem 0rem 3rem rgba(131, 58, 180, 50%);
}

.player-container-style {
  background-color: rgb(254, 254, 254);
  padding: 20px;
  border-radius: 8px;
}

.player-1-container {
  width: 100%;
  opacity: 50%;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.player-2-container {
  width: 100%;
  opacity: 50%;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.active-player {
  background-color: rgba(254, 254, 254, 70%);
  opacity: 100%;
}

.player-section {
  display: flex;
  flex-direction: column;
  gap: 10rem;
}

.section-header {
  text-align: center;
}

.player-title {
  text-transform: uppercase;
  text-align: center;
  font-size: 2.4rem;
  margin-bottom: 20px;
}

.player-score--style {
  text-align: center;
  font-size: 4rem;
}

.current-score-container {
  display: flex;
  align-items: center;
  justify-content: center;
}

.current-score-box {
  height: 70px;
  max-width: 200px;
  padding: 5px 10px 0 10px;
  box-shadow: inset 0px 0px 277px 3px #3f5efb;
  border-radius: 8px;
  text-align: center;
}

.current-score-title {
  text-align: center;
  text-transform: uppercase;
  font-size: 1.4rem;
}

.current-score--style {
  text-align: center;
  font-size: 1.8rem;
}

.button {
  font-size: 1.4rem;
  background-color: rgba(241, 8, 83, 70%);
  color: white;
  border: none;
  border-radius: 100px;
  padding: 5px 10px;
  font-family: "Roboto Mono", monospace;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 5px;
}

.button:hover,
.button:active {
  background-color: #da1e5a;
  opacity: 100%;
}

.button[disabled] {
  background-color: rgba(128, 128, 128, 50%);
  cursor: initial;
}

.button--restart {
  position: absolute;
  top: 10px;
}

.button--roll {
  position: absolute;
  bottom: 140px;
}

.button--hold {
  position: absolute;
  bottom: 95px;
}

.icon {
  height: 24px;
  width: 24px;
  stroke: black;
  border: none;
}

.hidden {
  display: none;
}

.winner-crown {
  text-align: center;
  font-size: 2.4rem;
}

.winner-crown--invisible {
  visibility: hidden;
}

